k8s/analytics-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service
  namespace: swiftpay
spec:
  replicas: 2
  selector:
    matchLabels:
      app: analytics-service
  template:
    metadata:
      labels:
        app: analytics-service
    spec:
      containers:
        - name: analytics-service
          image: analytics-service:2
          imagePullPolicy: Never
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: swiftpay
spec:
  selector:
    app: analytics-service
  ports:
    - port: 8083
      targetPort: 8083
