k8s/gateway-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
  namespace: swiftpay
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
        - name: gateway-service
          image: gateway-service:2
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: swiftpay
spec:
  type: LoadBalancer
  selector:
    app: gateway-service
  ports:
    - port: 8081
      targetPort: 8081
