k8s/ledger-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ledger-service
  namespace: swiftpay
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ledger-service
  template:
    metadata:
      labels:
        app: ledger-service
    spec:
      containers:
        - name: ledger-service
          image: ledger-service:2
          imagePullPolicy: Never
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: ledger-service
  namespace: swiftpay
spec:
  selector:
    app: ledger-service
  ports:
    - port: 8082
      targetPort: 8082
