k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: swiftpay-ingress
  namespace: swiftpay
spec:
  ingressClassName: nginx

  rules:
    - host: swiftpay.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8081
